# redis_client

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
diagrams/: application-workflow-diagram.drawio
jenkins/: json_docker_run.json  json_rs.json  project_deployment.groovy
monitoring/: prometheus.yml
monitoring/grafana/app/: Redis Client Monitoring.json
monitoring/grafana/redis/: Redis.json
postman/: redis-client-rust.postman_collection.json  redis.postman_environment.json
scripts/bash/: change_ttl.sh  download_dumps.sh  reset_keys.sh  upload_dumps.sh
scripts/bash/results/: change_ttl_logs.txt  download_dumps_logs.txt  reset_keys_logs.txt  upload_dumps_logs.txt
scripts/python/: change_ttl.py  download_dump.py  reset_keys.py  upload_dumps.py
src/: config.rs  lib.rs  main.rs
src/models/: response.rs  status.rs  status_key.rs  type_key.rs
src/routes/: init_routes_pages.rs  init_routes_redis.rs
static/css/: reset.css  styles.css
static/js/: app.js
templates/: index.html
tests/: api_add_hash_test.rs  api_add_list_test.rs  api_change_ttl_test.rs  api_download_dump_all_keys_test.rs  api_download_dump_key_test.rs  api_read_hash_test.rs  api_read_list_test.rs  api_rename_key_test.rs  api_reset_all_keys_test.rs  api_reset_key_test.rs  api_status_json_test.rs  api_status_key_test.rs  api_upload_dump_all_keys_test.rs  api_upload_dump_key_test.rs
tests/common/: mod.rs
tests/resources/: error_data_dump_all_keys.rdb  upload_dump_all_keys.rdb  upload_dump_key.dump
tests/src/: common.rs  mod.rs
(+44 files in other folders)
