[package]
name = "redis_client"
version = "0.1.0"
edition = "2021"

[dependencies]
r2d2 = "0.8"
r2d2_redis = "0.14.0"

actix-web = "4.9.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
tera = "1.15"

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.132"
actix-rt = "2.10.0"
actix-multipart-test = "0.0.3"

[profile.release]
opt-level = 3
